# jade-truffle

./: README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_app}}/: .envrc_template  .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  pytest.ini
{{cookiecutter.project_app}}/docker/: Dockerfile  docker-compose-deploy.yml  docker-compose.yml
{{cookiecutter.project_app}}/requirements/base/: base.in
{{cookiecutter.project_app}}/requirements/deploy/: deploy.in
{{cookiecutter.project_app}}/{{cookiecutter.project_app}}/: urls.py
{{cookiecutter.project_app}}/{{cookiecutter.project_app}}/settings/: base.py  deploy.py
