[tool.poetry]
name = "{{cookiecutter.project_app}}"
version = "0.1.0"
description = "{{cookiecutter.project_name}}"
authors = ["{{cookiecutter.author_name}} <{{cookiecutter.author_email}}>"]
license = "{{cookiecutter.license}}"
readme = "README.md"

homepage = "https://github.ncsu.edu/SAT/{{cookiecutter.project_repo}}"
repository = "https://github.ncsu.edu/SAT/{{cookiecutter.project_repo}}"
documentation = "https://github.ncsu.edu/SAT/{{cookiecutter.project_repo}}/gh-pages"
classifiers = [
    "{{cookiecutter.development_status}}",
]

[tool.poetry.urls]
Changelog = "https://github.ncsu.edu/SAT/{{cookiecutter.project_repo}}/releases"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2"


[tool.poetry.dev-dependencies]
pytest-cov = "^4.0.0"
mkdocs-material= "^9.1.6"
ruff = ">=0.0.261"
Pygments = ">=2.10.0"
bandit = ">=1.7.4"
black = "^23.3.0"
coverage = {extras = ["toml"], version = ">=6.2"}
isort = ">=5.10.1"
mypy = ">=0.930"
pep8-naming = ">=0.12.1"
pre-commit = ">=2.16.0"
pre-commit-hooks = ">=4.1.0"
pytest = ">=6.2.5"
pyupgrade = ">=2.29.1"
safety = ">=1.10.3"
typeguard = ">=2.13.3"

[[tool.poetry.source]]
name = "sat-pypi"
url = "https://pypi.ehps.ncsu.edu/"
default = false
secondary = true

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.2"

[tool.black]
line-length = 100
target-version = ['py37', 'py38', 'py39', 'py310']
include = '\.pyi?$'

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F"]
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 100

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.10.
target-version = "py311"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_context = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
