[build-system]
# These kinds of projects are not meant to be installed, but we need
# the build system in place to be a vaild pyproject.toml file.
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "{{cookiecutter.project_app}}"
version = "0.1.0"

dependencies = [
    "django>=4.2.0, <5.0.0",
    "dj-database-url>=1.3.0, <2.0.0",
    "whitenoise>=6.4.0, <7.0.0",
    "psycopg[binary]>=3.1.8, <4.0.0",
    "requests>=2.29.0, <3.0.0",
    "django-model-utils>=4.3.1, <5.0.0",
    "django-allauth>=0.54.0, <1.0.0",
    "django-extensions>=3.2.1, <4.0.0",
    "sat-utils>=1.1.6, <2.0.0",
]

[project.optional-dependencies]
dev = [
    "django-debug-toolbar>=4.0.0, <5.0.0",
    "pytest>=6.2.5, <7.0.0",
    "pytest-cov>=4.0.0, <5.0.0",
    "pytest-django>=4.5.2, <5.0.0",
    "pytest-celery>=0.0.0, <1.0.0",
    "coverage[toml]>=6.2",
    "black>=23.3.0, <24.0.0",
    "mypy>=1.2.0, <2.0.0",
    "ruff==0.0.263",
    "mkdocs-material>=9.1.6, <10.0.0",
    "Pygments>=2.10.0, <3.0.0",
    "bandit>=1.7.4, <2.0.0",
    "pre-commit>=3.3.1, <4.0.0",
    "isort>=5.10.1, <6.0.0",
    "pyupgrade>=2.29.1, <3.0.0",
    "invoke>=2.1.2, <3.0.0",
]
tools = [
    "ipython>=8.12.0, <9.0.0",
]

deploy = [
    "uwsgi>=2.0.21, <3.0.0",
    "pymemcache>=4.0.0, <5.0.0",
]

[tool.black]
target-version = ["py310"]
line-length = 100
include = '\.pyi?$'

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F", "W"]
src = ["apps", "automation"]
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "{{cookiecutter.project_app}}/settings/*",
    "**/migrations/"
]

# Same as Black.
line-length = 100

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.10.
target-version = "py310"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_context = true

[tool.bandit]
exclude_dirs = ["{{cookiecutter.project_app}}/settings/", "*/test*/", ".direnv/", ".venv", "venv"]
tests = ["B201", "B301"]
skips = ["B101", "B601"]
